src/test/ui/unboxed-closures/unboxed-closures-infer-fnmut-calling-fnmut-no-mut.stderr
error[E0596]: cannot borrow `tick1` as mutable, as it is not declared as mutable
  --> $DIR/unboxed-closures-infer-fnmut-calling-fnmut-no-mut.rs:16:9
   |
LL |     let tick1 = || {
   |         ----- help: consider changing this to be mutable: `mut tick1`
...
LL |         tick1();
   |         ^^^^^ cannot borrow as mutable

error[E0596]: cannot borrow `tick2` as mutable, as it is not declared as mutable
  --> $DIR/unboxed-closures-infer-fnmut-calling-fnmut-no-mut.rs:19:5
   |
LL |     let tick2 = || {
   |         ----- help: consider changing this to be mutable: `mut tick2`
...
LL |     tick2();
   |     ^^^^^ cannot borrow as mutable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0596`.
